[gd_scene load_steps=3 format=2]

[ext_resource path="res://GameObject/PlayerShield/Core/PlayerShield.gd" type="Script" id=1]
[ext_resource path="res://GameObject/PlayerEquipmentCore/PlayerEquipmentCore.tscn" type="PackedScene" id=2]

[node name="PlayerShield" instance=ExtResource( 2 )]
script = ExtResource( 1 )

[node name="RegenerateTimer" type="Timer" parent="." index="0"]
autostart = true

[node name="InterruptRecoverTimer" type="Timer" parent="." index="1"]
one_shot = true
[connection signal="timeout" from="RegenerateTimer" to="." method="_on_RegenerateTimer_timeout"]
[connection signal="timeout" from="InterruptRecoverTimer" to="." method="_on_InterruptRecoverTimer_timeout"]
